--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name"         : "site_tracker",
   "version"      : "0.0.1",
   "description"  : "Scrape and track elemented of a website",
-  "repository"   : { "type" : "git", "url" : "https://github.com/mbernier/site_tracker.git"}
+  "repository"   : { "type" : "git", "url" : "https://github.com/mbernier/site_tracker.git"},
   "main"         : "server.js",
   "author"       : "mbernier",
-  "files"        : ["./html.js", "./scrape.js", "./store.js"],
   "dependencies" : {
     "express"    : "latest",
     "request"    : "latest",
-    "cheerio"    : "latest"
+    "cheerio"    : "latest",
+    "mongoose"   : ">= 2.3.1"
   }
 }
