--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "main"         : "server.js",
   "author"       : "mbernier",
   "dependencies" : {
-    "express"    : "latest",
-    "request"    : "latest",
+    "body-parser": "latest",
     "cheerio"    : "latest",
-    "mongoose"   : ">= 2.3.1"
+    "errorhandler" : "latest",
+    "express"    : "latest",
+    "jade"       : "1.1.5",
+    "method-override" : "latest",
+    "mongoose"   : "3.8.4",
+    "morgan"     : "latest",
+    "request"    : "latest"
   }
 }
